Feature : Data 전처리를 위한 Data 불러오기

--- a/비속어모델.ipynb
+++ b/비속어모델.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9DWo2dft45a6LakkmJxoc",
+      "authorship_tag": "ABX9TyMWG3OuZ9LhGfMpJ8LqnNdl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1761,9 +1761,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hsqINtBY6qs7",
-        "outputId": "2bcdf354-56a7-4784-a598-1877e5b2edd5"
+        "outputId": "42b4f071-d84a-48c5-a3a7-67dc782d1396"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1772,20 +1772,20 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting transformers==4.1.1\n",
             "  Downloading transformers-4.1.1-py3-none-any.whl (1.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m27.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m20.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting tokenizers==0.9.4\n",
+            "  Downloading tokenizers-0.9.4-cp39-cp39-manylinux2010_x86_64.whl (2.9 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.9/2.9 MB\u001b[0m \u001b[31m81.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting sacremoses\n",
             "  Downloading sacremoses-0.0.53.tar.gz (880 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m880.6/880.6 KB\u001b[0m \u001b[31m38.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m880.6/880.6 KB\u001b[0m \u001b[31m75.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting tokenizers==0.9.4\n",
-            "  Downloading tokenizers-0.9.4-cp39-cp39-manylinux2010_x86_64.whl (2.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.9/2.9 MB\u001b[0m \u001b[31m34.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.9/dist-packages (from transformers==4.1.1) (2.27.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from transformers==4.1.1) (1.22.4)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.9/dist-packages (from transformers==4.1.1) (4.65.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.9/dist-packages (from transformers==4.1.1) (3.10.1)\n",
             "Requirement already satisfied: packaging in /usr/local/lib/python3.9/dist-packages (from transformers==4.1.1) (23.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from transformers==4.1.1) (1.22.4)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.9/dist-packages (from transformers==4.1.1) (2.27.1)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.9/dist-packages (from transformers==4.1.1) (3.10.1)\n",
             "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.9/dist-packages (from transformers==4.1.1) (2022.10.31)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.9/dist-packages (from transformers==4.1.1) (4.65.0)\n",
             "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.9/dist-packages (from requests->transformers==4.1.1) (2.0.12)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.9/dist-packages (from requests->transformers==4.1.1) (2022.12.7)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.9/dist-packages (from requests->transformers==4.1.1) (3.4)\n",
@@ -1795,7 +1795,7 @@
             "Requirement already satisfied: joblib in /usr/local/lib/python3.9/dist-packages (from sacremoses->transformers==4.1.1) (1.1.1)\n",
             "Building wheels for collected packages: sacremoses\n",
             "  Building wheel for sacremoses (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for sacremoses: filename=sacremoses-0.0.53-py3-none-any.whl size=895259 sha256=40144f2c6b60427b2e08c0ea7c7bd38e2a27ba869fe22f9540ccd06de819ad3d\n",
+            "  Created wheel for sacremoses: filename=sacremoses-0.0.53-py3-none-any.whl size=895259 sha256=c37fd986e4c5b7f6694a1d5cb3e7e9b50f7d7975bbf4818ec31f5042a62e5d3d\n",
             "  Stored in directory: /root/.cache/pip/wheels/12/1c/3d/46cf06718d63a32ff798a89594b61e7f345ab6b36d909ce033\n",
             "Successfully built sacremoses\n",
             "Installing collected packages: tokenizers, sacremoses, transformers\n",
@@ -1817,14 +1817,73 @@
       "cell_type": "code",
       "source": [
         "import math\n",
+        "import pandas as pd\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "from transformers import AutoModelForSequenceClassification, AutoTokenizer"
       ],
       "metadata": {
-        "id": "Q0RbrfwSnqWN"
+        "id": "Q0RbrfwSnqWN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d15a01db-2410-4b57-db0b-c6562b11fd96"
       },
-      "execution_count": 6,
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.9/dist-packages/flax/core/frozen_dict.py:169: FutureWarning: jax.tree_util.register_keypaths is deprecated, and will be removed in a future release. Please use `register_pytree_with_keys()` instead.\n",
+            "  jax.tree_util.register_keypaths(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 데이터 전처리"
+      ],
+      "metadata": {
+        "id": "zhrbHe9Phqi3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset = pd.read_csv(\"./sample_data/dataset.txt\", names=[\"text\", \"label\"], sep=\"|\")"
+      ],
+      "metadata": {
+        "id": "zMdeZt1Dhq9L"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "_dXzbdv5h9zZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## DataLoader"
+      ],
+      "metadata": {
+        "id": "4PDYa1f3g2lG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Lm_TeGq7g2YU"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1842,7 +1901,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 177,
+          "height": 233,
           "referenced_widgets": [
             "60524585f1434a0cb14b02a915a10a97",
             "4fd8f6a1ed1f448fbb63070298689bf9",
@@ -2000,7 +2059,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 354
+          "height": 444
         },
         "id": "1BtjnbUIvCNk",
         "outputId": "d9541305-1770-4c78-8616-75d999171bf6"
