--- a/BadtextClassification.ipynb
+++ b/BadtextClassification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3gDPiQ9dip/d0FCnJQwCi",
+      "authorship_tag": "ABX9TyMM2BafTP/NVGPzJSU0STyb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1868,7 +1868,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 177,
+          "height": 317,
           "referenced_widgets": [
             "7136e2acee064ed38dc4b6be2f0c3fa8",
             "3ddad247d38d465b9e0322c1e4dfc87d",
@@ -2018,12 +2018,12 @@
     {
       "cell_type": "code",
       "source": [
-        "test_text = \"야 너 닥쳐\""
+        "test_text = \"너 이 새끼야 닥쳐봐\""
       ],
       "metadata": {
         "id": "yv3mtqCne9bS"
       },
-      "execution_count": 34,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -2044,32 +2044,6 @@
       },
       "execution_count": 40,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mk_predlist([test_text])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IP-CjimYuKrq",
-        "outputId": "592374a0-f64f-4a8d-d5de-ee50931d310c"
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0.92209011, 0.07790989]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -2100,50 +2074,6 @@
     {
       "cell_type": "code",
       "source": [
-        "mk_predlist(classifier(test_text)[0])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "H96nFMf6l1r2",
-        "outputId": "cadda488-4a48-41d0-88a8-e7a08b476ffd"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'label': 'bad_sen', 'score': 0.9356476664543152}\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0.9356476664543152, 0.06435233354568481]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "exp = explainer.explain_instance(test_text, mk_predlist,top_labels=5)"
-      ],
-      "metadata": {
-        "id": "b5CUq4h7dzjM"
-      },
-      "execution_count": 42,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "exp.as_list()"
       ],
       "metadata": {
@@ -2166,6 +2096,34 @@
           },
           "metadata": {},
           "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if classifier(test_text)[0]['label'] == 'bad_sen':\n",
+        "  print('비속어 있음')\n",
+        "  exp = explainer.explain_instance(test_text, mk_predlist,top_labels=3)\n",
+        "  print(exp.as_list())\n",
+        "else:\n",
+        "  print('비속어 없음')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G1Ru6uy5COj0",
+        "outputId": "f901e8fd-383b-4be4-e70f-0fc9a72f345c"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('새끼야', -0.29051266893832417), ('닥쳐봐', -0.22468180441935537), ('이', -0.15621329981568058), ('너', -0.14162732833961472)]\n"
+          ]
         }
       ]
     },
